feat: enhance publish workflow with retries and token checks
Add retries for the release and publish steps to improve resilience. Introduce verification for JB_PLUGIN_REPOSITORY_TOKEN to ensure proper configuration. Simplify Git remote setup by replacing custom RELEASE_TOKEN with GITHUB_TOKEN.

--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -6,7 +6,9 @@ on:
   push:
     branches: [main]
 
+# Grant write permissions so that the built-in GITHUB_TOKEN can push tags/commits.
 permissions:
+  contents: write
   id-token: write
 
 #env:
