feat: enable and update plugin build workflow
The previously commented-out plugin build workflow has been enabled and updated to improve functionality. Changes include streamlined and renamed steps, full repository checkout, Gradle caching, and plugin artifact upload preparation. Adjustments were also made to the publish process for better clarity and automation.

--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -11,48 +11,47 @@ permissions:
   id-token: write
 
 jobs:
-#  build:
-#    runs-on: ubuntu-latest
-#    steps:
-#      # Fetch full history (required for tag-based versioning)
-#      - uses: actions/checkout@v3
-#        with:
-#          fetch-depth: 0
-#
-#      - name: Set up JDK 17
-#        uses: actions/setup-java@v3
-#        with:
-#          distribution: temurin
-#          java-version: '17'
-#
-#      - name: Make gradlew Executable
-#        run: chmod +x ./gradlew
-#
-#      - name: Cache Gradle Directories
-#        uses: actions/cache@v3
-#        with:
-#          path: |
-#            ~/.gradle/caches
-#            ~/.gradle/wrapper
-#            .gradle
-#          key: ${{ runner.os }}-gradle-${{ hashFiles('**/*.gradle*', '**/gradle/wrapper/gradle-wrapper.properties') }}
-#
-#      - name: Run Tests and Build Plugin
-#        run: |
-#          ./gradlew clean test buildPlugin patchPluginXml --no-daemon --stacktrace --parallel
-#
-#      - name: Upload Plugin Artifact
-#        uses: actions/upload-artifact@v3
-#        with:
-#          name: plugin-distribution
-#          path: build/distributions/*.zip
+  build:
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout Repository (Full History)
+        uses: actions/checkout@v3
+        with:
+          fetch-depth: 0
+
+      - name: Set up JDK 17
+        uses: actions/setup-java@v3
+        with:
+          distribution: temurin
+          java-version: 17
+
+      - name: Ensure gradlew is Executable
+        run: chmod +x ./gradlew
+
+      - name: Cache Gradle Directories
+        uses: actions/cache@v3
+        with:
+          path: |
+            ~/.gradle/caches
+            ~/.gradle/wrapper
+            .gradle
+          key: ${{ runner.os }}-gradle-${{ hashFiles('**/*.gradle*', '**/gradle/wrapper/gradle-wrapper.properties') }}
+
+      - name: Run Tests and Build Plugin
+        run: ./gradlew clean test buildPlugin patchPluginXml --no-daemon --stacktrace --parallel
+
+      - name: Upload Plugin Artifact
+        uses: actions/upload-artifact@v3
+        with:
+          name: plugin-distribution
+          path: build/distributions/*.zip
 
   release:
-#    needs: build
+    needs: build
     if: github.event_name == 'push'
     runs-on: ubuntu-latest
     steps:
-      - name: Checkout (Full History)
+      - name: Checkout Repository (Full History)
         uses: actions/checkout@v3
         with:
           fetch-depth: 0
@@ -88,12 +87,12 @@ jobs:
           git reset --hard origin/main
 
       - name: Publish Plugin with Retry
-        # Uses the action-retry action to automatically retry the publish command up to 3 times.
-        uses: dawidd6/action-retry@v2
+        uses: dawidd6/action-download-artifact@v8
         with:
           max_attempts: 3
           sleep: 10
           command: bash ./gradlew release publishPlugin --no-daemon --stacktrace --parallel
         env:
-          # Provide your JetBrains token via the environment variable so Gradle sets the property
+          # The environment variable ORG_GRADLE_PROJECT_intellijPlatformPublishingToken is the Gradle convention;
+          # it will automatically set the property intellijPlatformPublishingToken as defined in your build file.
           ORG_GRADLE_PROJECT_intellijPlatformPublishingToken: ${{ secrets.JB_PLUGIN_REPOSITORY_TOKEN }}
