--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -11,43 +11,43 @@ permissions:
   id-token: write
 
 jobs:
-  build:
-    runs-on: ubuntu-latest
-    steps:
-      - name: Checkout Repository (Full History)
-        uses: actions/checkout@v3
-        with:
-          fetch-depth: 0
-
-      - name: Set up JDK 17
-        uses: actions/setup-java@v3
-        with:
-          distribution: temurin
-          java-version: 17
-
-      - name: Ensure gradlew is Executable
-        run: chmod +x ./gradlew
-
-      - name: Cache Gradle Directories
-        uses: actions/cache@v3
-        with:
-          path: |
-            ~/.gradle/caches
-            ~/.gradle/wrapper
-            .gradle
-          key: ${{ runner.os }}-gradle-${{ hashFiles('**/*.gradle*', '**/gradle/wrapper/gradle-wrapper.properties') }}
-
-      - name: Run Tests and Build Plugin
-        run: ./gradlew clean test buildPlugin patchPluginXml --no-daemon --stacktrace --parallel
-
-      - name: Upload Plugin Artifact
-        uses: actions/upload-artifact@v3
-        with:
-          name: plugin-distribution
-          path: build/distributions/*.zip
+#  build:
+#    runs-on: ubuntu-latest
+#    steps:
+#      - name: Checkout Repository (Full History)
+#        uses: actions/checkout@v3
+#        with:
+#          fetch-depth: 0
+#
+#      - name: Set up JDK 17
+#        uses: actions/setup-java@v3
+#        with:
+#          distribution: temurin
+#          java-version: 17
+#
+#      - name: Ensure gradlew is Executable
+#        run: chmod +x ./gradlew
+#
+#      - name: Cache Gradle Directories
+#        uses: actions/cache@v3
+#        with:
+#          path: |
+#            ~/.gradle/caches
+#            ~/.gradle/wrapper
+#            .gradle
+#          key: ${{ runner.os }}-gradle-${{ hashFiles('**/*.gradle*', '**/gradle/wrapper/gradle-wrapper.properties') }}
+#
+#      - name: Run Tests and Build Plugin
+#        run: ./gradlew clean test buildPlugin patchPluginXml --no-daemon --stacktrace --parallel
+#
+#      - name: Upload Plugin Artifact
+#        uses: actions/upload-artifact@v4
+#        with:
+#          name: plugin-distribution
+#          path: build/distributions/*.zip
 
   release:
-    needs: build
+#    needs: build
     if: github.event_name == 'push'
     runs-on: ubuntu-latest
     steps:
