--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -86,10 +86,14 @@ jobs:
           git fetch --prune --tags
           git reset --hard origin/main
 
+      - name: Ensure gradlew is Executable
+        shell: bash
+        run: chmod +x ./gradlew
+
       - name: Publish Plugin with Retry
         uses: nick-fields/retry@v3
         with:
-          timeout_minutes: 10
+          timeout_seconds: 15
           max_attempts: 3
           shell: bash
           command: ./gradlew release publishPlugin --no-daemon --stacktrace --parallel
