--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -93,7 +93,7 @@ jobs:
       - name: Publish Plugin with Retry
         uses: nick-fields/retry@v3
         with:
-          timeout_seconds: 60
+          timeout_minutes: 3
           max_attempts: 1
           shell: bash
           command: bash -c "set -x; ./gradlew release publishPlugin --no-daemon --stacktrace --parallel"
